# neovim

./: .gitignore  .luacheckrc  .luarc.json  .markdownlint.json  .prettierrc  AGENTS.md  CHANGELOG.md  DEMO_MD_FILE.md  GEMINI.md  IMPROVEMENTS.md  LSP.md  PERFORMANCE.md  README.md  TESTING.md  TESTING_CHANGELOG_GUIDE.md  TEST_RESULTS.md  init.lua  lazy-lock.json  package-lock.json  stylua.toml
.claude/: settings.local.json
db_ui/postgres/: lab-1
demo/: DEMO_GUIDE.md  GD_TELESCOPE_PICKER.md  GO_TO_DEFINITION_EXPLAINED.md  GO_TO_DEFINITION_GUIDE.md  LSP_KEYBINDINGS_REFERENCE.md  SETUP_VERIFICATION.md  pyproject.toml
demo/lua/: README.md  main.lua  math.lua  utils.lua
demo/python/: README.md  __init__.py  calculator.py  main.py  utils.py
demo/typescript/: README.md  main.ts  math.ts  tsconfig.json  utils.ts
demo/yaml/: README.md  docker-compose.yml  github-actions.yml  kubernetes.yml
docs/: AGENTS.md  CHANGELOG.md  IMPROVEMENTS.md  KEYMAPS.md  LSP.md  MARKDOWN-FORMATTING.md  PERFORMANCE.md  TESTING.md
ftplugin/: htmldjango.vim  markdown.vim  python.vim  xmp.vim
journal/: 260322-fix-markdown-dollar-sign-highlighting.md  260421-markdown-print-mode-toggle.md
lua/: autocmd.lua  colorscheme.lua  functions.lua  mappings.lua  options.lua  plugins.lua
lua/plugins/: aerial.lua  alpha.lua  ansible-vim.lua  asyncrun.lua  auto-session.lua  autopairs.lua  bufferline.lua  close-buffers.lua  cmp.lua  comment.lua  conform.lua  dadbod.lua  fzf.lua  (+38 more)
scripts/: health-check  install-hooks  pre-commit  pre-push  quality-gate
test/: README.md  test_lsp.sh  test_zsh.zsh
(+13 files in other folders)
